syntax = "proto3";

package user;

option go_package = "github.com/yesiamanerd/flight-reservation-golang/user-service/proto;userpb";

// Signup request & response
message SignupRequest {
  string username = 1;
  string password = 2;
}
message AuthResponse {
  int32 user_id = 1;
  repeated string roles = 2;
  string status = 3;
}

// Login request
message LoginRequest {
  string username = 1;
  string password = 2;
}

// The service definition
service UserService {
  rpc Signup(SignupRequest) returns (AuthResponse);
  rpc Login(LoginRequest)   returns (AuthResponse);
}
